[package]
name = "routez"
version = "0.3.1"
authors = ["Mihai Galos <mihaigalos@gmail.com>"]
description = "⏩ A zero-dep port forwarder."
edition = "2021"

categories = [
    "command-line-utilities",
    "network-programming"
]
keywords = [
    "cli",
    "forward",
    "port",
    "proxy"
]

repository = "https://github.com/mihaigalos/routez"
license = "MIT"

[dependencies]
